# nwfwa

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
apps/api-server/: Cargo.toml  Dockerfile
apps/api-server/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  pii.rs  repository.rs
apps/api-server/src/app/: app_routes.rs
apps/api-server/src/config/: config_model.rs  config_validation.rs  mod.rs
apps/api-server/src/repository/: agent_helpers.rs  audit_helpers.rs  audit_sample_helpers.rs  case_rows.rs  dashboard_helpers.rs  dataset_rows.rs  evidence_rows.rs  in_memory.rs  knowledge_helpers.rs  member_profile_helpers.rs  mod.rs  model_helpers.rs  outcome_helpers.rs  postgres.rs  postgres_agent_helpers.rs  postgres_agents.rs  postgres_audit.rs  postgres_audit_samples.rs  postgres_cases.rs  postgres_claims.rs  postgres_dashboard.rs  postgres_datasets.rs  postgres_evidence.rs  postgres_inbox.rs  postgres_knowledge.rs  postgres_models.rs  postgres_outcomes.rs  postgres_providers.rs  postgres_qa.rs  postgres_routing_policies.rs  postgres_rule_reviews.rs  postgres_rules.rs  postgres_scoring.rs  postgres_webhooks.rs  provider_helpers.rs  row_types.rs  rule_defaults.rs  rule_helpers.rs  rule_performance_helpers.rs  saving_helpers.rs  (+16 more)
apps/api-server/src/routes/: agent.rs  claims.rs  claims_agent.rs  claims_canonical.rs  claims_evidence.rs  claims_lookup.rs  claims_types.rs  claims_validation.rs  dashboard.rs  health.rs  inbox.rs  inbox_mapping.rs  inbox_utils.rs  inbox_validation.rs  knowledge.rs  mod.rs  openapi.rs  openapi_components.rs  openapi_paths.rs  openapi_paths_core.rs  openapi_paths_data_ops.rs  openapi_paths_data_ops_datasets.rs  openapi_paths_data_ops_evidence.rs  openapi_paths_data_ops_model_assets.rs  openapi_paths_data_ops_operations.rs  openapi_paths_governance.rs  openapi_paths_model_ops.rs  openapi_paths_model_ops_core.rs  openapi_paths_model_ops_lifecycle.rs  openapi_paths_model_ops_mlops.rs  openapi_paths_model_ops_providers.rs  openapi_paths_model_ops_retraining.rs  openapi_paths_model_ops_review.rs  openapi_paths_pilot.rs  openapi_paths_rules.rs  openapi_schemas_core.rs  openapi_schemas_data_models.rs  openapi_schemas_data_models_datasets.rs  openapi_schemas_data_models_evidence.rs  openapi_schemas_data_models_factors.rs  (+73 more)
apps/api-server/tests/: claims_score.rs  health.rs  inbox.rs  knowledge_agent.rs  knowledge_permissions.rs  ops_audit.rs  ops_bootstrap.rs  ops_cases.rs  ops_dashboard.rs  ops_datasets.rs  ops_evidence.rs  ops_medical.rs  ops_models.rs  ops_openapi.rs  ops_providers.rs  ops_routing_policies.rs  ops_rules.rs  ops_sampling.rs  ops_schemes.rs  pilot_loop.rs  postgres_repository.rs  tpa_contract_docs.rs
apps/api-server/tests/claims_score/: canonical_inbox.rs  evidence_signals.rs  model_registry.rs  openapi_contract.rs  payload_contracts.rs  routing_decisions.rs  support.rs  validation.rs
apps/api-server/tests/inbox/: coverage_windows.rs  document_quality.rs  normalization.rs  support.rs
apps/api-server/tests/knowledge_agent/: approvals.rs  knowledge_cases.rs
apps/api-server/tests/ops_audit/: filters.rs  support.rs
apps/api-server/tests/ops_cases/: case_status.rs  investigation_results.rs
apps/api-server/tests/ops_dashboard/: summary.rs
apps/api-server/tests/ops_datasets/: model_lineage.rs
apps/api-server/tests/ops_models/: lifecycle.rs  mlops_monitoring.rs  performance.rs  probability_calibration.rs  promotion_gates.rs  retraining_jobs.rs  retraining_output_validation.rs  retraining_readiness.rs  support.rs
apps/api-server/tests/ops_openapi/: support.rs  (+8 more)
apps/ml-service/: Dockerfile  pyproject.toml
apps/ml-service/app/: __init__.py  main.py  mlops.py  schemas.py  scorer.py  train.py  training.py  training_diagnostics.py  training_job_records.py  training_jobs.py  training_reports.py  training_rule_candidates.py  training_runner.py  training_runtime.py  training_utils.py  training_worker.py
apps/ml-service/fwa_ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ml-service/tests/: test_score.py  test_training_jobs_api.py  test_training_jobs_queue.py  test_training_pipeline.py  training_fixtures.py
apps/web-console/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web-console/src/: App.tsx  api.rs  api.test.ts  api.ts  case_helpers.rs  constants.rs  data_helpers.rs  data_lineage_helpers.rs  formatting.rs  i18n.rs  inbox_helpers.rs  main.rs  main.tsx  medical_review_helpers.rs  model_ui_helpers.rs  ops_app.rs  ops_routing.rs  payload_helpers.rs  routing.rs  rule_helpers.rs  rule_ui_helpers.rs  runtime_helpers.rs  state.rs  styles.css  types.rs  ui_helpers.rs  visual_helpers.rs
apps/worker/: Cargo.toml  Dockerfile
apps/worker/src/: alertmanager.rs  anomaly_clustering.rs  anomaly_upgrade.rs  audit_retention.rs  automl_lifecycle.rs  automl_ranking.rs  clinical_compatibility.rs  clustering.rs  clustering_data.rs  clustering_math.rs  clustering_types.rs  dataset_profile.rs  dataset_types.rs  demo_datasets.rs  demo_lifecycle.rs  episode_rollup.rs  feature_set.rs  health.rs  lib.rs  main.rs  mlops_cycle.rs  mlops_delivery.rs  mlops_monitoring.rs  mlops_monitoring_plan.rs  mlops_monitoring_report.rs  mlops_monitoring_runtime.rs  model_artifact_evaluation.rs  ops_plans.rs  parquet_utils.rs  peer_benchmark.rs  probability_calibration.rs  provider_graph_rollup.rs  provider_profile_rollup.rs  retraining.rs  retraining_output.rs  rule_candidates.rs  sanctions.rs  scoring_feature_context.rs  scoring_readback.rs  tests.rs  (+5 more)
crates/fwa-ml-runtime/: Cargo.toml
crates/fwa-ml-runtime/src/: heuristic.rs  http.rs  lib.rs  scorer_artifact.rs  scorer_heuristic.rs  scorer_http.rs  scorer_manifest.rs  tests.rs  types.rs  verify.rs
crates/fwa-ocr/: Cargo.toml
crates/fwa-ocr/src/: fetcher.rs  lib.rs  processor.rs  provider.rs  queue.rs  queue_redis.rs  queue_sqs.rs  writeback.rs
crates/fwa-scoring/: Cargo.toml
crates/fwa-scoring/benches/: scoring_aggregate.rs
crates/fwa-scoring/src/: decision.rs  evidence.rs  lib.rs  tests.rs
(+485 files in other folders)
