[package]
name = "api-server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
arrow-array = "53"
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
fwa-audit = { path = "../../crates/fwa-audit" }
fwa-anomaly = { path = "../../crates/fwa-anomaly" }
fwa-agent = { path = "../../crates/fwa-agent" }
fwa-auth = { path = "../../crates/fwa-auth" }
fwa-clinical = { path = "../../crates/fwa-clinical" }
fwa-core = { path = "../../crates/fwa-core" }
fwa-features = { path = "../../crates/fwa-features" }
fwa-ml-runtime = { path = "../../crates/fwa-ml-runtime" }
fwa-provider = { path = "../../crates/fwa-provider" }
fwa-rules = { path = "../../crates/fwa-rules" }
fwa-scoring = { path = "../../crates/fwa-scoring" }
parquet = { version = "53", features = ["arrow"] }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["limit", "util"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
testcontainers = "0.27"
