[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fwa-ml-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "pandas>=2.2",
  "pyarrow>=16",
  "pydantic>=2",
  "scikit-learn>=1.5",
  "uvicorn>=0.34",
  "xgboost>=2.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8",
]

[tool.setuptools]
packages = ["app"]
