[package]
name = "fwa-web-console"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false
rust-version = "1.82"

[workspace]

[dependencies]
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement"] }
yew = { version = "0.21", features = ["csr"] }
