[package]
name = "fwa-web-console"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false
rust-version = "1.82"

[workspace]

[dependencies]
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "Location", "Window"] }
yew = { version = "0.21", features = ["csr"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
