[package]
name = "fwa-ml-runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
fwa-core = { path = "../fwa-core" }
fwa-features = { path = "../fwa-features" }
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
