[package]
name = "fwa-scoring"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
fwa-anomaly = { path = "../fwa-anomaly" }
fwa-core = { path = "../fwa-core" }
fwa-features = { path = "../fwa-features" }
fwa-ml-runtime = { path = "../fwa-ml-runtime" }
fwa-rules = { path = "../fwa-rules" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scoring_aggregate"
harness = false
